main/default/objects/Internal_Logistics__c/Internal_Logistics__c.object-meta.xml
<CustomObject>
    <label>Internal Logistics</label>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Internal Logistics Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Logistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>