main/default/objects/Internal_Logistics__c/fields/Additional_Logistics_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Logistics_Information__c</fullName>
    <label>Additional Logistics Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>