main/default/objects/Internal_Logistics__c/fields/Breakfast_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Per_Diem__c</fullName>
    <label>Breakfast Per Diem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>