main/default/objects/Internal_Logistics__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Internal Logistics</relationshipLabel>
    <relationshipName>Internal_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>