main/default/objects/Internal_Logistics__c/fields/Event_Address__c.field-meta.xml
<CustomField>
    <fullName>Event_Address__c</fullName>
    <formula>IF(
        ISPICKVAL(Event_Name__r.Event_Type__c, &quot;Virtual&quot;),
        &quot;Virtual&quot;,
        IF(
                (NOT(ISBLANK(Event_Name__r.Location__c)) &amp;&amp; NOT(ISBLANK(Event_Name__r.Location__r.BillingAddress))) ,
                (Event_Name__r.Location__r.BillingStreet &amp; BR() &amp; 
                Event_Name__r.Location__r.BillingCity &amp; &quot;, &quot; &amp;
                Event_Name__r.Location__r.BillingState &amp; &quot; &quot; &amp;
                Event_Name__r.Location__r.BillingPostalCode &amp; BR() &amp;
                Event_Name__r.Location__r.BillingCountry),
                &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Address</label>
    <type>Text</type>
</CustomField>