main/default/objects/Internal_Logistics__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Name</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Internal Logistics</relationshipLabel>
    <relationshipName>Internal_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>