main/default/objects/Internal_Logistics__c/fields/Event_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date_Time__c</fullName>
    <formula>Event_Name__r.Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date Time</label>
    <type>DateTime</type>
</CustomField>