main/default/objects/Internal_Logistics__c/fields/Event_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Event_Time_Zone__c</fullName>
    <formula>TEXT(Event_Name__r.Time_Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Time Zone</label>
    <type>Text</type>
</CustomField>