main/default/objects/Internal_Logistics__c/fields/Initial_Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Initial_Meeting_Location__c</fullName>
    <label>Initial Meeting Location</label>
    <type>TextArea</type>
</CustomField>