main/default/objects/Internal_Logistics__c/fields/Initial_Meeting_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Meeting_Time__c</fullName>
    <label>Initial Meeting Time</label>
    <type>DateTime</type>
</CustomField>