main/default/objects/Internal_Logistics__c/fields/Lodging_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Rate__c</fullName>
    <label>Lodging Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>