main/default/objects/Internal_Logistics__c/fields/Lunch_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Per_Diem__c</fullName>
    <label>Lunch Per Diem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>