main/default/objects/Internal_Logistics__c/fields/Number_of_Allocated_Rental_Cars__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Allocated_Rental_Cars__c</fullName>
    <label>Number of Allocated Rental Cars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>