main/default/objects/Internal_Logistics__c/fields/Other_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Other_Per_Diem__c</fullName>
    <label>Other Per Diem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>