main/default/objects/Internal_Logistics__c/fields/Preferred_Event_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Event_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Event Hotel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Internal Logistics (Preferred Event Hotel)</relationshipLabel>
    <relationshipName>Internal_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>