main/default/objects/Internal_Logistics__c/fields/Session_Locations__c.field-meta.xml
<CustomField>
    <fullName>Session_Locations__c</fullName>
    <label>Session Locations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>