main/default/objects/Internal_Logistics__c/fields/Site_POC_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Site_POC_Contact_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site POC Contact Information</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Internal Logistics</relationshipLabel>
    <relationshipName>Internal_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>