main/default/objects/Internal_Logistics__c/fields/Total_Daily_Meal_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Total_Daily_Meal_Per_Diem__c</fullName>
    <label>Total Daily Meal Per Diem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>