main/default/objects/Internal_Logistics__c/fields/Travel_Day_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Travel_Day_Per_Diem__c</fullName>
    <label>Travel Day Per Diem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>