main/default/objects/Internal_Logistics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Name__c</columns>
    <columns>Session_Locations__c</columns>
    <columns>Number_of_Locations__c</columns>
    <columns>Event_Start_Date_Time__c</columns>
    <columns>Event_End_Date_Time__c</columns>
    <columns>Event_Time_Zone__c</columns>
    <columns>Event_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>